# Project-JV1-GP-Stratz

./: .gitignore  DEMO_GUIDE.md  Dockerfile  LICENSE  PROJECT_DESIGN.md  README.md  app.py  inference.py  inference_dry_run_check.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: generate_data.py  scenarios.csv  scenarios.json  scenarios.xlsx
env/: race_env.py
grader/: evaluate.py
others/archived/: scenarios.csv  scenarios.xlsx
others/notes/: DATA_RATIONALE.md  Explain.md
server/: app.py
