[project]
name = "GP-Stratz"
version = "1.0.0"
description = "GP-Stratz Motorsport Strategy Environment"
dependencies = [
    "openenv-core==0.2.3",
    "openai==2.28.0",
    "pydantic==2.12.5",
    "fastapi==0.128.0",
    "uvicorn==0.38.0",
    "pandas==2.2.0",
    "openpyxl==3.1.2"
]

[project.scripts]
server = "app:main"
