[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-stratz"
version = "1.0.0"
description = "GP-Stratz OpenEnv submission"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
